--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -1,5 +1,9 @@
+*{
+	padding: 0;
+	margin: 0;
+}
+
 body{
-	background: purple;
 
 	a{
 		text-decoration: none;
@@ -11,8 +15,12 @@ body{
 
 	nav{
 		background-color: white;
-		.logo{
+		height: 50px;
+		border: 1px solid silver;
+
+		.logo, .person{
 			width: 30px;
+			padding-top: 10px;
 		}
 
 		.inicio{
@@ -22,15 +30,20 @@ body{
 
 		.input{
 			width: 800px;
+			height: 20px;
+			padding-top: 11px;
 		}
 
 		.input[placeholder]{
 			padding-left: 25px;
+			font-size: 15px;
+			background-color: whitesmoke;
 		}
 
 		.search{
 			width: 25px;
 			position: absolute;
+			margin-top: 17px;
 		}
 
 		.x{
@@ -38,6 +51,38 @@ body{
 			color: silver;
 		}
 
+		.v{
+			margin-left: 4px;
+			border: 1px solid silver;
+			padding: 10px;
+			position: absolute;
+			padding-top: 9px 10px 2px 10px;
+			margin-top: 9px;
+			color: silver;
+			background-color: whitesmoke;
+		}
+
+		.v:hover, .x:hover{
+			color: black;
+		}
+
+		.person{
+			padding-left: 150px;
+		}
+
+		.lupe, .barss,{
+			position: absolute;
+			padding: 17px 0 0 10px;
+		}
 		
+		.barss,{
+			color: silver;
+			padding-left: 80px;
+			font-size: 20px;
+		}
+
+		.chats{
+			padding-left: 120px;
+		}
 	}
 }
