Se Imprimen los datos pero no me toman los estilos u.u

--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -115,8 +115,15 @@ body{
 			margin-left: 5px;
 		}
 	}
-
 	/* FIN OPCIONES */
+	/* JSONn */
+	.json{
+		padding-top: 40px;
+		display: inline-block;
+		padding-left: 20px;
+
+	}
+	/* Fin JSON */
 
 
 }
