--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -122,11 +122,21 @@ body{
 		display: inline-block;
 		padding-left: 65px;
 
-	}
+		#json{
+			column-width: 200px;
+			width: 100%;
+			max-width: 1100px;
+			margin: 50px auto;
+			column-gap: 10px;
+			div#modal{
+				column-break-inside: avoid;
+				display: inline-block;
+				margin: 0 2px 15px;
+				font-size: 15px;
+			}
+		}
 
-	.hide{
-		display: none; // ocultar
- 	}
+	}
 	/* Fin JSON */
 
 
